--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>ply-demo</name>
-	<comment></comment>
+	<comment>Project ply-demo created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
