--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com.ply-ct'
-version = '1.0.1-SNAPSHOT'
+version = '1.0.2'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
