--- a/src/test/ply/results/expected/movies-api/POST_movies.yaml
+++ b/src/test/ply/results/expected/movies-api/POST_movies.yaml
@@ -47,7 +47,7 @@ response:
     message: Created
   headers:
     content-type: application/json
-    location: 'https://limberest.io/demo/movies/435b30ad'
+    location: 'https://ply-ct.com/demo/api/movies/435b30ad'
   body: |-
     {
       "credits": [
