--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,26 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
+            "name": "movie-crud",
             "program": "${workspaceFolder}/src/test/ply/cases/movie-crud.js",
             "cwd": "${workspaceFolder}/src/test/ply/cases"
-        }
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "movie-queries",
+            "program": "${workspaceFolder}/src/test/ply/cases/movie-queries.js",
+            "cwd": "${workspaceFolder}/src/test/ply/cases"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "movie-validations",
+            "program": "${workspaceFolder}/src/test/ply/cases/movie-validations.js",
+            "cwd": "${workspaceFolder}/src/test/ply/cases"
+        }                
     ]
 }
