--- a/src/test/ply/results/expected/movies-api/movie-validations.yaml
+++ b/src/test/ply/results/expected/movies-api/movie-validations.yaml
@@ -1,6 +1,6 @@
 test: bad post
 request:
-  url: '${base-url}/movies'
+  url: '${baseUrl}/movies'
   method: POST
   headers:
     Accept: application/json
@@ -55,7 +55,7 @@ response:
     }
 test: create movie
 request:
-  url: '${base-url}/movies'
+  url: '${baseUrl}/movies'
   method: POST
   headers:
     Accept: application/json
@@ -102,7 +102,7 @@ response:
     message: Created
   headers:
     content-type: application/json
-    location: '${base-url}/movies/${id}'
+    location: '${baseUrl}/movies/${id}'
   body: |-
     {
       "credits": [
@@ -142,7 +142,7 @@ response:
     }
 test: movie-validations
 request:
-  url: '${base-url}/movies/${id}'
+  url: '${baseUrl}/movies/${id}'
   method: PUT
   headers:
     Accept: application/json
@@ -200,7 +200,7 @@ response:
     }
 test: movie-validations
 request:
-  url: '${base-url}/movies/${id}'
+  url: '${baseUrl}/movies/${id}'
   method: GET
   headers:
     Accept: application/json
@@ -249,7 +249,7 @@ response:
     }
 test: movie-validations
 request:
-  url: '${base-url}/movies/${id}'
+  url: '${baseUrl}/movies/${id}'
   method: DELETE
   headers:
     Accept: application/json
