--- a/src/test/ply/results/expected/movies-api/GET_Movies Query.yaml
+++ b/src/test/ply/results/expected/movies-api/GET_Movies Query.yaml
@@ -1,6 +1,6 @@
-test: 'GET:movies?{query}'
+test: 'GET:Movies Query'
 request:
-  url: '${base-url}/movies?${query}'  # value expressions
+  url: '${baseUrl}/movies?${query}'  # value expressions
   method: GET
   headers:
     Accept: application/json
