--- a/src/test/ply/results/expected/movies-api/GET_Movie by ID.yaml
+++ b/src/test/ply/results/expected/movies-api/GET_Movie by ID.yaml
@@ -40,6 +40,7 @@ response:
       ],
       "id": "${id}",
       "poster": "cothd.jpg",
+      "rating": ${rating},
       "title": "The Case of the Howling Dog",
       "webRef": {
         "ref": "tt0024958",
