--- a/src/test/ply/results/expected/movies-api/POST_Create Movie.yaml
+++ b/src/test/ply/results/expected/movies-api/POST_Create Movie.yaml
@@ -1,6 +1,6 @@
-test: 'POST:movies' # comments are ignored when comparing
+test: 'POST:Create Movie' # comments are ignored when comparing
 request:
-  url: '${base-url}/movies'
+  url: '${baseUrl}/movies'
   method: POST
   headers:
     Accept: application/json
