--- a/src/test/ply/requests/movies-api.request.yaml
+++ b/src/test/ply/requests/movies-api.request.yaml
@@ -4,6 +4,7 @@ createMovie:
   headers:
     Accept: application/json
     Content-Type: application/json
+    Authorization: ${authorization}
   body: |-
     {
       "credits": [
@@ -46,6 +47,7 @@ updateMovie:
   headers:
     Accept: application/json
     Content-Type: application/json
+    Authorization: ${authorization}
   body: |-
     {
       "credits": [
@@ -94,3 +96,4 @@ deleteMovie:
   method: DELETE
   headers:
     Accept: application/json
+    Authorization: ${authorization}
