--- a/test/ply/requests/movies-api.ply.yaml
+++ b/test/ply/requests/movies-api.ply.yaml
@@ -1,5 +1,7 @@
-createMovie:
-  url: '${baseUrl}/movies'
+# This file appears in .plyignore to indicate that these requests
+# are not to be run directly, but only through case file movieCrud.ply.ts.
+createMovie: # POST
+  url: '${baseUrl}'
   method: POST
   headers:
     Accept: application/json
@@ -41,8 +43,34 @@ createMovie:
       },
       "year": 1934
     }
-updateMovie:
-  url: '${baseUrl}/movies/${id}'
+
+updateMovie: # PATCH
+  url: '${baseUrl}/${id}'
+  method: PATCH
+  headers:
+    Accept: application/json
+    Content-Type: application/json
+    Authorization: ${authorization}
+  body: |-
+    {
+      "rating": ${rating}
+    }
+
+retrieveMovie: # GET
+  url: '${baseUrl}/${id}'
+  method: GET
+  headers:
+    Accept: application/json
+
+deleteMovie: # DELETE
+  url: '${baseUrl}/${id}'
+  method: DELETE
+  headers:
+    Accept: application/json
+    Authorization: ${authorization}
+
+replaceMovie: # POST
+  url: '${baseUrl}/${id}'
   method: PUT
   headers:
     Accept: application/json
@@ -86,14 +114,3 @@ updateMovie:
       },
       "year": 1934
     }
-retrieveMovie:
-  url: '${baseUrl}/movies/${id}'
-  method: GET
-  headers:
-    Accept: application/json
-deleteMovie:
-  url: '${baseUrl}/movies/${id}'
-  method: DELETE
-  headers:
-    Accept: application/json
-    Authorization: ${authorization}
