--- a/test/ply/results/expected/requests/movie-queries.yaml
+++ b/test/ply/results/expected/requests/movie-queries.yaml
@@ -1,56 +1,6 @@
-movieById:
-  request:
-    url: '${baseUrl}/movies/${id}'
-    method: GET
-    headers:
-      Accept: application/json
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      content-type: application/json
-    body: |-
-      {
-        "credits": [
-          {
-            "name": "Alan Crosland",
-            "role": "director"
-          },
-          {
-            "name": "Warren William",
-            "role": "actor"
-          },
-          {
-            "name": "Mary Astor",
-            "role": "actor"
-          },
-          {
-            "name": "Allen Jenkins",
-            "role": "actor"
-          },
-          {
-            "name": "Grant Mitchell",
-            "role": "actor"
-          },
-          {
-            "name": "Helen Trenholme",
-            "role": "actor"
-          }
-        ],
-        "id": "${id}",
-        "poster": "cothd.jpg",
-        "rating": 4,
-        "title": "The Case of the Howling Dog",
-        "webRef": {
-          "ref": "tt0024958",
-          "site": "imdb.com"
-        },
-        "year": 1934
-      }
 moviesByYearAndRating:
   request:
-    url: '${baseUrl}/movies?year=${year}&rating=${rating}'
+    url: '${baseUrl}?year=${year}&rating=${rating}'
     method: GET
     headers:
       Accept: application/json
@@ -59,7 +9,7 @@ moviesByYearAndRating:
       code: 200
       message: OK
     headers:
-      content-type: application/json
+      content-type: application/json${~.*}  # charset is optional (regex)
     body: |-
       {
         "movies": [
@@ -91,7 +41,7 @@ moviesByYearAndRating:
               }
             ],
             "description": "The only thing more amazing than Lugosi's out-of-body performance is the fact that the finest horror movie ever made was filmed within 2 years of the advent of talking pictures.",
-            "id": "8f180e68",
+            "id": "269b34c1",
             "poster": "drac.jpg",
             "rating": ${rating},
             "title": "Dracula",
@@ -129,7 +79,7 @@ moviesByYearAndRating:
               }
             ],
             "description": "Frankenstein solidified Universal's place as the premier horror studio of the era, and stands as the definitive American take on the school of German Expressionism.",
-            "id": "eec22a97",
+            "id": "e2bca0d",
             "poster": "frank.jpg",
             "rating": ${rating},
             "title": "Frankenstein",
@@ -141,10 +91,9 @@ moviesByYearAndRating:
           }
         ]
       }
-moviesQuery:
+movieById:
   request:
-    url: >-
-      ${baseUrl}/movies?${query}
+    url: '${baseUrl}/${@moviesByYearAndRating.response.body.movies[1].id}' # id from previous response
     method: GET
     headers:
       Accept: application/json
@@ -153,7 +102,58 @@ moviesQuery:
       code: 200
       message: OK
     headers:
-      content-type: application/json
+      content-type: application/json${~.*}  # charset is optional (regex)
+    body: |-
+      {
+        "credits": [
+          {
+            "name": "James Whale",
+            "role": "director"
+          },
+          {
+            "name": "Boris Karloff",
+            "role": "actor"
+          },
+          {
+            "name": "Colin Clive",
+            "role": "actor"
+          },
+          {
+            "name": "Mae Clarke",
+            "role": "actor"
+          },
+          {
+            "name": "John Boles",
+            "role": "actor"
+          },
+          {
+            "name": "Dwight Frye",
+            "role": "actor"
+          }
+        ],
+        "description": "Frankenstein solidified Universal's place as the premier horror studio of the era, and stands as the definitive American take on the school of German Expressionism.",
+        "id": "${@moviesByYearAndRating.response.body.movies[1].id}",
+        "poster": "frank.jpg",
+        "rating": 5,
+        "title": "Frankenstein",
+        "webRef": {
+          "ref": "tt0021884",
+          "site": "imdb.com"
+        },
+        "year": 1931
+      }
+moviesQuery:
+  request:
+    url: '${baseUrl}?${query}'
+    method: GET
+    headers:
+      Accept: application/json
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      content-type: application/json${~.*}  # charset is optional (regex)
     body: |-
       {
         "movies": [
@@ -185,7 +185,7 @@ moviesQuery:
               }
             ],
             "description": "James Whale's poignant, horrifying, hilarious masterpiece demonstrates his genius and surpasses the original as a cathartic, visionary tour de force.",
-            "id": "f6b3c56c",
+            "id": "f236166",
             "poster": "tbof.jpg",
             "rating": 5,
             "title": "Bride of Frankenstein",
@@ -223,7 +223,7 @@ moviesQuery:
               }
             ],
             "description": "The best of Hitchcock's early features, with a truly thrilling series of chase sequences and a richly developed romantic interest; only slightly sullied by the ludicrous shenanigans during the last five minutes.",
-            "id": "4a4b04d",
+            "id": "494ecd62",
             "poster": "ttns.jpg",
             "rating": 4.5,
             "title": "The Thirty-Nine Steps",
