--- a/package.json
+++ b/package.json
@@ -11,16 +11,13 @@
     "build": "tsc",
     "server": "node dist/src/main.js"
   },
-  "engines": {
-    "node": ">=12"
-  },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.20.0",
-    "@typescript-eslint/parser": "^2.20.0",
-    "eslint": "^6.8.0",
-    "typescript": "^3.8.3",
-    "@types/node": "^13.7.4"
+    "@types/node": "^13.7.4",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
+    "eslint": "^7.4.0",
+    "ply-ct": "^2.0.9",
+    "typescript": "^3.9.6"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
