--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "server": "node dist/src/main.js"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.12",
     "@types/node": "^13.7.4",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
+    "chai": "^4.2.0",
     "eslint": "^7.4.0",
     "ply-ct": "^2.0.9",
+    "ply-movies": "^1.0.8",
     "typescript": "^3.9.6"
   },
   "dependencies": {}
