--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "tsc",
     "preply": "./node_modules/ply-movies/dist/cli.js start &",
     "ply": "ply",
-    "postply": "./node_modules/ply-movies/dist/cli.js stop"
+    "postply": "./node_modules/ply-movies/dist/cli.js stop",
+    "test": "npm run ply"
   },
   "devDependencies": {
     "@types/chai": "^4.2.12",
