--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,5 +1,5 @@
 # basic github workflow to exercise ply tests
-name: build-test
+name: 'build-test'
 
 on:
   push:
@@ -7,14 +7,36 @@ on:
   pull_request:
     branches: [ master ]
 
+# jobs:
+#   'build/test':
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: build ply-demo and run api tests
+#       uses: actions/setup-node@v1
+#       with:
+#         node-version: '12.x'
+#     - run: npm install
+#     - run: npm run build
+#     - run: npm test
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  'build/test':
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    - name: build ply-demo and run api tests
-      uses: actions/setup-node@v1
-      with:
-        node-version: '12.x'
-    - run: npm install
-    - run: npm run build
-    - run: npm test
+
+    # Runs a single command using the runners shell
+    - name: Run a one-line script
+      run: echo Hello, world!
+
+    # Runs a set of commands using the runners shell
+    - name: Run a multi-line script
+      run: |
+        echo Add other actions to build,
+        echo test, and deploy your project.
