--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,5 +1,5 @@
 # basic github workflow to exercise ply tests
-name: 'build-test'
+name: 'ply-demo ci'
 
 on:
   push:
@@ -22,7 +22,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  'build/test':
+  'build_test':
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
