--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -8,7 +8,7 @@ on:
     branches: [ master ]
 
 jobs:
-  'build-test':
+  build_test:
     steps:
     - uses: actions/checkout@v2
     - name: build ply-demo and run api tests
