--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -7,14 +7,26 @@ on:
   pull_request:
     branches: [ master ]
 
+# jobs:
+#   build_test:
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: build ply-demo and run api tests
+#       uses: actions/setup-node@v1
+#       with:
+#         node-version: '12.x'
+#     - run: npm install
+#     - run: npm run build
+#     - run: npm test
+
 jobs:
-  build_test:
+  build-test:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: build ply-demo and run api tests
-      uses: actions/setup-node@v1
-      with:
-        node-version: '12.x'
-    - run: npm install
-    - run: npm run build
-    - run: npm test
+    - name: Run a one-line script
+      run: echo Hello, world!
+    - name: Run a multi-line script
+      run: |
+        echo Add other actions to build,
+        echo test, and deploy your project.
