--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -19,8 +19,19 @@ on:
 #     - run: npm run build
 #     - run: npm test
 
+jobs:
+  build-test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: build ply-demo and run api tests
+      uses: actions/setup-node@v1
+      # with:
+      #   node-version: '12.x'
+      run: npm install
+
 # jobs:
-#   build_test:
+#   build-test:
 #     runs-on: ubuntu-latest
 #     steps:
 #     - uses: actions/checkout@v2
@@ -30,16 +41,4 @@ on:
 #       run: |
 #         echo Add other actions to build,
 #         echo test, and deploy your project.
-
-jobs:
-  build-test:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
 
