--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -24,11 +24,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: build ply-demo and run api tests
-      uses: actions/setup-node@v1
-      # with:
-      #   node-version: '12.x'
-      run: npm install
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '12.x'
+    - run: npm install
+    - run: npm test
 
 # jobs:
 #   build-test:
