--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -7,18 +7,6 @@ on:
   pull_request:
     branches: [ master ]
 
-# jobs:
-#   build_test:
-#     steps:
-#     - uses: actions/checkout@v2
-#     - name: build ply-demo and run api tests
-#       uses: actions/setup-node@v1
-#       with:
-#         node-version: '12.x'
-#     - run: npm install
-#     - run: npm run build
-#     - run: npm test
-
 jobs:
   build-test:
     runs-on: ubuntu-latest
@@ -28,20 +16,7 @@ jobs:
       with:
         node-version: '12.x'
     - run: npm install
-    - run: npm install -g tsc
+#    - run: npm install -g tsc
     - run: npm install -g ply-ct
-    - run: npm run build
+#    - run: npm run build
     - run: npm test
-
-# jobs:
-#   build-test:
-#     runs-on: ubuntu-latest
-#     steps:
-#     - uses: actions/checkout@v2
-#     - name: Run a one-line script
-#       run: echo Hello, world!
-#     - name: Run a multi-line script
-#       run: |
-#         echo Add other actions to build,
-#         echo test, and deploy your project.
-
