--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -16,7 +16,8 @@ jobs:
       with:
         node-version: '12.x'
     - run: npm install
-#    - run: npm install -g tsc
+    # todo remove
+    - run: npm run build
+    - run: npm locale
     - run: npm install -g ply-ct
-#    - run: npm run build
     - run: npm test
