--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -18,6 +18,6 @@ jobs:
     - run: npm install
     # todo remove
     - run: npm run build
-    - run: npm locale
+    - run: npm run locale
     - run: npm install -g ply-ct
     - run: npm test
