--- a/test/results/expected/requests/movie-queries.yaml
+++ b/test/results/expected/requests/movie-queries.yaml
@@ -16,7 +16,7 @@ moviesByYearAndRating:
           {
             "credits": [
               {
-                "name": "Tod Browning",
+                "name": "Fail Purposely",
                 "role": "director"
               },
               {
