--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   },
   "scripts": {
     "build": "tsc",
-    "preply": "./node_modules/ply-movies/dist/cli.js start &",
+    "start-movies": "ply-movies start &",
+    "stop-movies": "ply-movies stop",
     "ply": "ply",
-    "postply": "./node_modules/ply-movies/dist/cli.js stop",
-    "test": "npm run ply"
+    "pretest": "npm run start-movies",
+    "test": "npm-run-all ply stop-movies --continue-on-error"
   },
   "devDependencies": {
     "@types/chai": "^4.2.12",
@@ -24,8 +25,9 @@
     "@typescript-eslint/parser": "^3.6.1",
     "chai": "^4.2.0",
     "eslint": "^7.4.0",
-    "ply-ct": "^2.1.0",
-    "ply-movies": "^1.0.8",
+    "npm-run-all": "^4.1.5",
+    "ply-ct": "^2.1.1",
+    "ply-movies": "^1.0.9",
     "typescript": "^3.9.6"
   },
   "dependencies": {}
