--- a/test/requests/movies-api.ply.yaml
+++ b/test/requests/movies-api.ply.yaml
@@ -1,5 +1,5 @@
-# This file appears in .plyignore to indicate that these requests
-# are not to be run directly, but only through case file movieCrud.ply.ts.
+# This file is skipped in plyconfig.json since these requests are
+# not meant to be run directly, but only through cases in movieCrud.ply.ts.
 createMovie: # POST
   url: '${baseUrl}'
   method: POST
