--- a/test/requests/github-api.ply.yaml
+++ b/test/requests/github-api.ply.yaml
@@ -2,7 +2,7 @@ repositoryTopics:
   url: 'https://api.github.com/repos/${github.organization}/${github.repository}/topics'
   method: GET
   headers:
-    Accept: application/vnd.github.mercy-preview+json # topics still in preview
+    Accept: application/vnd.github.mercy-preview+json
 
 # GraphQL query
 repositoryTopicsQuery:
