--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "engines": {
     "node": ">=12"
   },
+  "config": {
+    "port": 3001
+  },
   "scripts": {
     "build": "tsc",
-    "start-movies": "ply-movies start &",
-	"start-movies-windows": "start /b ply-movies start",
-    "stop-movies": "ply-movies stop",
+    "start-movies": "run-script-os",
+    "start-movies:default": "ply-movies start -p $npm_package_config_port -q &",
+    "start-movies:windows": "start /b ply-movies start -p $npm_package_config_port",
+    "stop-movies": "ply-movies stop -p $npm_package_config_port",
     "ply": "ply",
     "pretest": "npm run start-movies",
     "test": "npm-run-all ply stop-movies --continue-on-error"
@@ -28,7 +32,8 @@
     "eslint": "^7.7.0",
     "npm-run-all": "^4.1.5",
     "ply-ct": "^2.1.3",
-    "ply-movies": "^1.0.9",
+    "ply-movies": "^1.0.11",
+    "run-script-os": "^1.1.1",
     "typescript": "^4.0.2"
   },
   "dependencies": {}
