--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "node": ">=12"
   },
   "config": {
-    "port": 3000
+    "port": 3001
   },
   "scripts": {
     "build": "tsc",
     "start-movies": "run-script-os",
     "start-movies:default": "ply-movies start -p $npm_package_config_port -q &",
-    "start-movies:windows": "start /b ply-movies start -p $npm_package_config_port",
-    "stop-movies": "ply-movies stop -p $npm_package_config_port",
+    "start-movies:windows": "start /b ply-movies start -p %npm_package_config_port% -q",
+	"stop-movies": "run-script-os",
+    "stop-movies:default": "ply-movies stop -p $npm_package_config_port",
+	"stop-movies:windows": "ply-movies stop -p %npm_package_config_port%",
     "ply": "ply",
     "pretest": "npm run start-movies",
     "test": "npm-run-all ply stop-movies --continue-on-error"
