--- a/test/results/expected/requests/movie-queries.yaml
+++ b/test/results/expected/requests/movie-queries.yaml
@@ -9,7 +9,7 @@ moviesByYearAndRating:
       code: 200
       message: OK
     headers:
-      content-type: application/json${~.*}  # charset is optional (regex)
+      content-type: application/json; charset=utf-8
     body: |-
       {
         "movies": [
@@ -40,8 +40,8 @@ moviesByYearAndRating:
                 "role": "actor"
               }
             ],
-            "description": "The only thing more amazing than Lugosi's out-of-body performance is the fact that the finest horror movie ever made was filmed within 2 years of the advent of talking pictures.",
-            "id": "269b34c1",
+            "description": "What's even more amazing than Lugosi's out-of-body performance is the fact that the finest horror movie ever made was filmed within 2 years of the advent of talking pictures.",
+            "id": "${~[a-f0-9]}+",
             "poster": "drac.jpg",
             "rating": ${rating},
             "title": "Dracula",
@@ -79,7 +79,7 @@ moviesByYearAndRating:
               }
             ],
             "description": "Frankenstein solidified Universal's place as the premier horror studio of the era, and stands as the definitive American take on the school of German Expressionism.",
-            "id": "e2bca0d",
+            "id": "${~[a-f0-9]}+",
             "poster": "frank.jpg",
             "rating": ${rating},
             "title": "Frankenstein",
@@ -93,7 +93,7 @@ moviesByYearAndRating:
       }
 movieById:
   request:
-    url: '${baseUrl}/${@moviesByYearAndRating.response.body.movies[1].id}' # id from previous response
+    url: '${baseUrl}/${@moviesByYearAndRating.response.body.movies[0].id}' # id from previous response
     method: GET
     headers:
       Accept: application/json
@@ -102,49 +102,49 @@ movieById:
       code: 200
       message: OK
     headers:
-      content-type: application/json${~.*}  # charset is optional (regex)
+      content-type: application/json; charset=utf-8
     body: |-
       {
         "credits": [
           {
-            "name": "James Whale",
+            "name": "Tod Browning",
             "role": "director"
           },
           {
-            "name": "Boris Karloff",
+            "name": "Bela Lugosi",
             "role": "actor"
           },
           {
-            "name": "Colin Clive",
+            "name": "Helen Chandler",
             "role": "actor"
           },
           {
-            "name": "Mae Clarke",
-            "role": "actor"
-          },
-          {
-            "name": "John Boles",
+            "name": "David Manners",
             "role": "actor"
           },
           {
             "name": "Dwight Frye",
             "role": "actor"
+          },
+          {
+            "name": "Edward Van Sloan",
+            "role": "actor"
           }
         ],
-        "description": "Frankenstein solidified Universal's place as the premier horror studio of the era, and stands as the definitive American take on the school of German Expressionism.",
-        "id": "${@moviesByYearAndRating.response.body.movies[1].id}",
-        "poster": "frank.jpg",
-        "rating": 5,
-        "title": "Frankenstein",
+        "description": "What's even more amazing than Lugosi's out-of-body performance is the fact that the finest horror movie ever made was filmed within 2 years of the advent of talking pictures.",
+        "id": "${@moviesByYearAndRating.response.body.movies[0].id}",
+        "poster": "drac.jpg",
+        "rating": ${rating},
+        "title": "Dracula",
         "webRef": {
-          "ref": "tt0021884",
+          "ref": "tt0021814",
           "site": "imdb.com"
         },
-        "year": 1931
+        "year": ${year}
       }
-moviesQuery:
+greatFilmsOf1935:
   request:
-    url: '${baseUrl}?${query}'
+    url: '${baseUrl}?${queries.highlyRated1935}'
     method: GET
     headers:
       Accept: application/json
@@ -153,7 +153,7 @@ moviesQuery:
       code: 200
       message: OK
     headers:
-      content-type: application/json${~.*}  # charset is optional (regex)
+      content-type: application/json; charset=utf-8
     body: |-
       {
         "movies": [
@@ -185,7 +185,7 @@ moviesQuery:
               }
             ],
             "description": "James Whale's poignant, horrifying, hilarious masterpiece demonstrates his genius and surpasses the original as a cathartic, visionary tour de force.",
-            "id": "f236166",
+            "id": "${~[a-f0-9]}+",
             "poster": "tbof.jpg",
             "rating": 5,
             "title": "Bride of Frankenstein",
@@ -223,7 +223,7 @@ moviesQuery:
               }
             ],
             "description": "The best of Hitchcock's early features, with a truly thrilling series of chase sequences and a richly developed romantic interest; only slightly sullied by the ludicrous shenanigans during the last five minutes.",
-            "id": "494ecd62",
+            "id": "${~[a-f0-9]}+",
             "poster": "ttns.jpg",
             "rating": 4.5,
             "title": "The Thirty-Nine Steps",
@@ -232,6 +232,158 @@ moviesQuery:
               "site": "imdb.com"
             },
             "year": 1935
+          }
+        ]
+      }
+bestMovieOf1935:
+  request:
+    url: '${baseUrl}?${queries.tipTop1935}'
+    method: GET
+    headers:
+      Accept: application/json
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      content-type: application/json; charset=utf-8
+    body: |-
+      {
+        "movies": [
+          {
+            "credits": [
+              {
+                "name": "James Whale",
+                "role": "director"
+              },
+              {
+                "name": "Boris Karloff",
+                "role": "actor"
+              },
+              {
+                "name": "Colin Clive",
+                "role": "actor"
+              },
+              {
+                "name": "Valerie Hobson",
+                "role": "actor"
+              },
+              {
+                "name": "Ernest Thesiger",
+                "role": "actor"
+              },
+              {
+                "name": "Dwight Frye",
+                "role": "actor"
+              }
+            ],
+            "description": "James Whale's poignant, horrifying, hilarious masterpiece demonstrates his genius and surpasses the original as a cathartic, visionary tour de force.",
+            "id": "${@greatFilmsOf1935.response.body.movies[0].id}",
+            "poster": "tbof.jpg",
+            "rating": 5,
+            "title": "Bride of Frankenstein",
+            "webRef": {
+              "ref": "tt0026138",
+              "site": "imdb.com"
+            },
+            "year": 1935
+          }
+        ]
+      }
+stinkersOf1932:
+  request:
+    url: '${baseUrl}?${queries.poorlyRated1932}'
+    method: GET
+    headers:
+      Accept: application/json
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      content-type: application/json; charset=utf-8
+    body: |-
+      {
+        "movies": [
+          {
+            "credits": [
+              {
+                "name": "Armand Schaefer",
+                "role": "director"
+              },
+              {
+                "name": "Jack Mulhall",
+                "role": "actor"
+              },
+              {
+                "name": "Phyllis Barrington",
+                "role": "actor"
+              },
+              {
+                "name": "Crauford Kent",
+                "role": "actor"
+              },
+              {
+                "name": "Mischa Auer",
+                "role": "actor"
+              },
+              {
+                "name": "Louis Natheaux",
+                "role": "actor"
+              }
+            ],
+            "description": "There's a reason you've never heard of Willis Kent Productions, and it has everything to do with uninspired and stiffly-acted features like this limp excuse for a murder mystery.",
+            "id": "${~[a-f0-9]}+",
+            "poster": "sh.jpg",
+            "rating": 2,
+            "title": "Sinister Hands",
+            "webRef": {
+              "ref": "tt0023478",
+              "site": "imdb.com"
+            },
+            "year": 1932
+          },
+          {
+            "credits": [
+              {
+                "name": "Hampton Del Ruth",
+                "role": "director"
+              },
+              {
+                "name": "Phil Whitman",
+                "role": "director"
+              },
+              {
+                "name": "Regis Toomey",
+                "role": "actor"
+              },
+              {
+                "name": "June Clyde",
+                "role": "actor"
+              },
+              {
+                "name": "Lucille La Verne",
+                "role": "actor"
+              },
+              {
+                "name": "Jason Robards Sr.",
+                "role": "actor"
+              },
+              {
+                "name": "Dwight Frye",
+                "role": "actor"
+              }
+            ],
+            "description": "An utterly forgettable offering from tiny, unprolific Chadwick Productions, packed with all the cliches and none of the charm of other early-talkie drawing room mysteries.",
+            "id": "${~[a-f0-9]}+",
+            "poster": "twmc.jpg",
+            "rating": 2,
+            "title": "The Wayne Murder Case",
+            "webRef": {
+              "ref": "tt0023520",
+              "site": "imdb.com"
+            },
+            "year": 1932
           }
         ]
       }
