--- a/test/requests/github-api.ply.yaml
+++ b/test/requests/github-api.ply.yaml
@@ -1,3 +1,4 @@
+# REST API
 repositoryTopics:
   url: 'https://api.github.com/repos/${github.organization}/${github.repository}/topics'
   method: GET
