--- a/package.json
+++ b/package.json
@@ -26,18 +26,18 @@
     "pretest": "npm run start-movies",
     "test": "npm-run-all ply stop-movies --continue-on-error"
   },
+  "dependencies": {},
   "devDependencies": {
     "@types/chai": "^4.2.12",
     "@types/node": "^13.13.15",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
     "chai": "^4.2.0",
-    "eslint": "^7.7.0",
+    "eslint": "^7.10.0",
     "npm-run-all": "^4.1.5",
     "ply-ct": "^2.1.9",
     "ply-movies": "^1.0.12",
     "run-script-os": "^1.1.1",
     "typescript": "^4.0.2"
-  },
-  "dependencies": {}
+  }
 }
